# LocARNA

./: .clang-format  .gitignore  .hgignore  .travis.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.md  Doxyfile  INSTALL  LocARNA-1.0.pc  LocARNA.pc.in  Makefile-benchmark.in  Makefile.am  README  README.md  TODO  acinclude.m4  configure  configure.ac  configure.scan  doxygen.cfg  index.md
.circleci/: config.yml
CVS/: Entries  Repository
Data/: Ribosum85-60-freq  archaea.fasta  giegerich.fasta  sRNA.fasta  tRNA.fasta  tRNA_5.fa  tRNA_7.fa
Doc/: Explanation-probabilistic  HOWTO-reliability-profile  Makefile  Makefile.local  README.call-locarnate  README.doxygen-awesome-css  README.evaluate  README.explocP-parameter  doxygen.cfg  example.evaluation  example.output  example2.output  locarnap-doc.tex  manFilter.sh  refs.bib
Examples/: 6S_RNA.fa  empty.aln  hammerhead_3.fa  hammerhead_3.stk  tRNA_2.fa  tRNA_7.ref
Ideas/: locarna-ng.tex  new-score.tex
Packaging/: README.build-debian  build.sh  dput-all.sh
Params/: CG_parameters_v1.1.par
TechDetails/: affine-locarna.tex  gotoh.tex
Utils/: .#mlocarna.in.1.31  .#mlocarna.in.1.42  Makefile.am  RNAz.pm  add_weighted.pl  aln-seqs.pl  aln2fa.pl  aln2fa.pl.in  alnsel.pl  alnsel.pl.in  average-dot.pl  compare-dotplots.pl  correlation-dotplots.R  cplex.scr  dot2pp  dot2pp_1  drawdplin  drawdplin-horiz  exploc-p.in  exploc_p  exploc_p.in  gen-dot.pl  gen-reliab-dot.pl  identity.cc  legend-rainbow.R  locarna-mea.in  locarna-mea.pl  locarna-motif-scan  locarna-realign  locarna.pl  locarnap-predict-and-plot.pl  locarnap-realign-all.pl  locarnap-revcomp.pl  locarnap-revisit-RNAz-hits.pl  locarnate  locarnate.in  locarnate_old.in  mlocarna  mlocarna-svmgdnspdk.sh  mlocarna-tc  (+20 more)
Utils/CVS/: Entries  Repository
Utils/Obsolete/: gen-dot.pl
docs/: aligner_8hh_source.html  aligner__impl_8hh_source.html  aligner__n_8hh_source.html  aligner__p_8hh_source.html  aligner__params_8hh_source.html  aligner__restriction_8hh_source.html  alignment_8hh_source.html  alignment__impl_8hh_source.html  alphabet_8hh_source.html  anchor__constraints_8hh_source.html  annotated.html  arc__matches_8hh_source.html  aux_8hh_source.html  base__pair__filter_8hh_source.html  basepairs_8hh_source.html  classLocARNA_1_1Aligner-members.html  classLocARNA_1_1Aligner.html  classLocARNA_1_1AlignerImpl-members.html  classLocARNA_1_1AlignerImpl.html  classLocARNA_1_1AlignerImpl_1_1ModifiedScoringView-members.html  classLocARNA_1_1AlignerImpl_1_1ModifiedScoringView.html  classLocARNA_1_1AlignerImpl_1_1UnmodifiedScoringView-members.html  classLocARNA_1_1AlignerImpl_1_1UnmodifiedScoringView.html  classLocARNA_1_1AlignerImpl__coll__graph.map  classLocARNA_1_1AlignerImpl__coll__graph.md5  classLocARNA_1_1AlignerN-members.html  (+824 more)
man/: Makefile.am
misc/CVS/: Root  (+2 more)
src/: Makefile.am  aligner.cc  aligner.hh  aligner_p.cc  aligner_p.hh  alignment.cc  alignment.hh  alphabet.hh  anchor_constraints.cc  anchor_constraints.hh  arc_matches.cc  arc_matches.hh  aux.cc  aux.hh  basepairs.cc  basepairs.hh  basepairs_looptraversal.cc  basepairs_looptraversal.cc.old  basepairs_looptraversal.hh  basepairs_looptraversal.hh.old  deviation.cc  edge_controller.cc  edge_controller.hh  edge_controller_test.cc  evaluator.cc  evaluator.hh  exact_matcher.cc  exact_matcher.hh  exparna_p.cc  fit.cc  fitonoff.cc  fitonoff.hh  infty_arith_int.cc  infty_arith_int.hh  libLocARNA-1.0.la  locarna.cc  locarna.hh  locarna_X.cc  locarna_n.cc  locarna_p.cc  (+29 more)
src/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/.metadata/.plugins/org.eclipse.mylyn.tasks.ui/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
src/.metadata/.plugins/org.tigris.subversion.subclipse.ui/: dialog_settings.xml
src/CVS/: Entries  Repository
src/LocARNA/: aligner.cc  aligner.hh  aligner_impl.hh  aligner_n.cc  aligner_n.hh  aligner_p.cc  aligner_p.hh  aligner_p.icc  aligner_params.hh  aligner_restriction.hh  alignment.cc  alignment.hh  alignment_impl.hh  alphabet.hh  alphabet.icc  anchor_constraints.cc  anchor_constraints.hh  arc_matches.cc  arc_matches.hh  aux.cc  aux.hh  base_pair_filter.hh  basepairs.cc  basepairs.hh  confusion_matrix.cc  confusion_matrix.hh  discrete_distribution.hh  edge_probs.cc  edge_probs.hh  edge_probs.icc  evaluator.cc  evaluator.hh  exact_matcher.cc  exact_matcher.hh  ext_rna_data.hh  ext_rna_data_impl.hh  fitonoff.cc  fitonoff.hh  free_endgaps.hh  global_stopwatch.cc  (+65 more)
src/Tests/: Makefile  Makefile.am  alphabet.cc  anchor_constraints.cc  archaea-wrong.fa.data  archaea.aln.data  archaea.fa.data  check.hh  exparna_p.testresult  ext_rna_data.cc  locarna-local.testresult  locarna-normalized.testresult  locarnate.testresult  matrices.cc  mlocarna-archaea-alifold.testresult  mlocarna-bed-anchors.testresult  mlocarna-calls.sh  mlocarna-haca-constraints.testresult  mlocarna-probabilistic-ext.testresult  mlocarna-probabilistic.testresult  mlocarna-realign.testresult  mlocarna-sparse.testresult  mlocarna-threads.testresult  multiple_alignment.cc  rna_data.cc  rna_ensemble.cc  rna_structure.cc  test_index_t.cc  test_locarna_lib.cc  test_mlocarna  test_multiple_alignment.cc  test_programs  test_rna_data.cc  test_rna_ensemble.cc  test_trace_controller.cc  test_tree.pl  trace_controller.cc  zip.cc
src/Utils/: LocARNA_RNAz.pm  Makefile.am  RNAz.pm  add_newick_intermediate_labels  add_weighted.pl  aln-seqs.pl  aln2fa.pl  alnsel.pl  average-dot.pl  benchmark-multi-plot.R  benchmark-plot.R  compare-dotplots.pl  correlation-dotplots.R  dot2pp  dot2pp_1  drawdplin  drawdplin-horiz  exploc_p  gen-reliab-dot.pl  identity.cc  locarna-mea.pl  locarna-motif-scan  locarna-realign  locarna.pl  locarna_mcc  locarnap-predict-and-plot.pl  locarnap-realign-all.pl  locarnap-revcomp.pl  locarnap-revisit-RNAz-hits.pl  locarnate  locarnate.pl  locarnate_old.in  mlocarna  mlocarna-svmgdnspdk.sh  mlocarna-tc  mlocarna.pl  mlocarna_nnames  nupack_dotplot.pl  plot-bmprobs  plot-clustal  (+8 more)
(+412 files in other folders)
