SUBDIRS = src Utils lib


man_MANS=man/locarna.1 man/mlocarna.1 man/locarnate.1

matrices_DATA=\
Matrices/RIBOSUM85_60

#Matrices/RIBOSUM100_25 Matrices/RIBOSUM100_30 Matrices/RIBOSUM100_35 Matrices/RIBOSUM100_40 \
Matrices/RIBOSUM100_45 Matrices/RIBOSUM100_50 Matrices/RIBOSUM100_55 Matrices/RIBOSUM100_60 \
Matrices/RIBOSUM100_65 Matrices/RIBOSUM100_70 Matrices/RIBOSUM100_75 Matrices/RIBOSUM100_80 \
Matrices/RIBOSUM100_85 Matrices/RIBOSUM100_90 Matrices/RIBOSUM100_95 \
Matrices/RIBOSUM45_25 Matrices/RIBOSUM45_30 Matrices/RIBOSUM45_35 Matrices/RIBOSUM45_40 \
Matrices/RIBOSUM45_45 Matrices/RIBOSUM45_50 Matrices/RIBOSUM45_55 Matrices/RIBOSUM45_60 \
Matrices/RIBOSUM45_65 Matrices/RIBOSUM45_70 Matrices/RIBOSUM45_75 Matrices/RIBOSUM45_80 \
Matrices/RIBOSUM45_85 Matrices/RIBOSUM45_90 Matrices/RIBOSUM45_95 \
Matrices/RIBOSUM50_25 Matrices/RIBOSUM50_30 Matrices/RIBOSUM50_35 Matrices/RIBOSUM50_40 \
Matrices/RIBOSUM50_45 Matrices/RIBOSUM50_50 Matrices/RIBOSUM50_55 Matrices/RIBOSUM50_60 \
Matrices/RIBOSUM50_65 Matrices/RIBOSUM50_70 Matrices/RIBOSUM50_75 Matrices/RIBOSUM50_80 \
Matrices/RIBOSUM50_85 Matrices/RIBOSUM50_90 Matrices/RIBOSUM50_95 \
Matrices/RIBOSUM55_25 Matrices/RIBOSUM55_30 Matrices/RIBOSUM55_35 Matrices/RIBOSUM55_40 \
Matrices/RIBOSUM55_45 Matrices/RIBOSUM55_50 Matrices/RIBOSUM55_55 Matrices/RIBOSUM55_60 \
Matrices/RIBOSUM55_65 Matrices/RIBOSUM55_70 Matrices/RIBOSUM55_75 Matrices/RIBOSUM55_80 \
Matrices/RIBOSUM55_85 Matrices/RIBOSUM55_90 Matrices/RIBOSUM55_95 \
Matrices/RIBOSUM60_25 Matrices/RIBOSUM60_30 Matrices/RIBOSUM60_35 Matrices/RIBOSUM60_40 \
Matrices/RIBOSUM60_45 Matrices/RIBOSUM60_50 Matrices/RIBOSUM60_55 Matrices/RIBOSUM60_60 \
Matrices/RIBOSUM60_65 Matrices/RIBOSUM60_70 Matrices/RIBOSUM60_75 Matrices/RIBOSUM60_80 \
Matrices/RIBOSUM60_85 Matrices/RIBOSUM60_90 Matrices/RIBOSUM60_95 \
Matrices/RIBOSUM65_25 Matrices/RIBOSUM65_30 Matrices/RIBOSUM65_35 Matrices/RIBOSUM65_40 \
Matrices/RIBOSUM65_45 Matrices/RIBOSUM65_50 Matrices/RIBOSUM65_55 Matrices/RIBOSUM65_60 \
Matrices/RIBOSUM65_65 Matrices/RIBOSUM65_70 Matrices/RIBOSUM65_75 Matrices/RIBOSUM65_80 \
Matrices/RIBOSUM65_85 Matrices/RIBOSUM65_90 Matrices/RIBOSUM65_95 \
Matrices/RIBOSUM70_25 Matrices/RIBOSUM70_30 Matrices/RIBOSUM70_35 Matrices/RIBOSUM70_40 \
Matrices/RIBOSUM70_45 Matrices/RIBOSUM70_50 Matrices/RIBOSUM70_55 Matrices/RIBOSUM70_60 \
Matrices/RIBOSUM70_65 Matrices/RIBOSUM70_70 Matrices/RIBOSUM70_75 Matrices/RIBOSUM70_80 \
Matrices/RIBOSUM70_85 Matrices/RIBOSUM70_90 Matrices/RIBOSUM70_95 \
Matrices/RIBOSUM75_25 Matrices/RIBOSUM75_30 Matrices/RIBOSUM75_35 Matrices/RIBOSUM75_40 \
Matrices/RIBOSUM75_45 Matrices/RIBOSUM75_50 Matrices/RIBOSUM75_55 Matrices/RIBOSUM75_60 \
Matrices/RIBOSUM75_65 Matrices/RIBOSUM75_70 Matrices/RIBOSUM75_75 Matrices/RIBOSUM75_80 \
Matrices/RIBOSUM75_85 Matrices/RIBOSUM75_90 Matrices/RIBOSUM75_95 \
Matrices/RIBOSUM80_25 Matrices/RIBOSUM80_30 Matrices/RIBOSUM80_35 Matrices/RIBOSUM80_40 \
Matrices/RIBOSUM80_45 Matrices/RIBOSUM80_50 Matrices/RIBOSUM80_55 Matrices/RIBOSUM80_60 \
Matrices/RIBOSUM80_65 Matrices/RIBOSUM80_70 Matrices/RIBOSUM80_75 Matrices/RIBOSUM80_80 \
Matrices/RIBOSUM80_85 Matrices/RIBOSUM80_90 Matrices/RIBOSUM80_95 \
Matrices/RIBOSUM85_25 Matrices/RIBOSUM85_30 Matrices/RIBOSUM85_35 Matrices/RIBOSUM85_40 \
Matrices/RIBOSUM85_45 Matrices/RIBOSUM85_50 Matrices/RIBOSUM85_55 Matrices/RIBOSUM85_60 \
Matrices/RIBOSUM85_65 Matrices/RIBOSUM85_70 Matrices/RIBOSUM85_75 Matrices/RIBOSUM85_80 \
Matrices/RIBOSUM85_85 Matrices/RIBOSUM85_90 Matrices/RIBOSUM85_95 \
Matrices/RIBOSUM90_25 Matrices/RIBOSUM90_30 Matrices/RIBOSUM90_35 Matrices/RIBOSUM90_40 \
Matrices/RIBOSUM90_45 Matrices/RIBOSUM90_50 Matrices/RIBOSUM90_55 Matrices/RIBOSUM90_60 \
Matrices/RIBOSUM90_65 Matrices/RIBOSUM90_70 Matrices/RIBOSUM90_75 Matrices/RIBOSUM90_80 \
Matrices/RIBOSUM90_85 Matrices/RIBOSUM90_90 Matrices/RIBOSUM90_95 \
Matrices/RIBOSUM95_25 Matrices/RIBOSUM95_30 Matrices/RIBOSUM95_35 Matrices/RIBOSUM95_40 \
Matrices/RIBOSUM95_45 Matrices/RIBOSUM95_50 Matrices/RIBOSUM95_55 Matrices/RIBOSUM95_60 \
Matrices/RIBOSUM95_65 Matrices/RIBOSUM95_70 Matrices/RIBOSUM95_75 Matrices/RIBOSUM95_80 \
Matrices/RIBOSUM95_85 Matrices/RIBOSUM95_90 Matrices/RIBOSUM95_95

matricesdir=$(prefix)/share/locarna/Matrices

EXTRA_DIST=Examples/archaea.fa Examples/ferritin.fa Examples/haca.snoRNA.fa Examples/hammerhead_3.fa \
	$(man_MANS)  $(matrices_DATA) 


man/locarna.1: src/locarna man-subdir
	-$(HELP2MAN) --output=$@ src/locarna

man/mlocarna.1: Utils/mlocarna man-subdir
	-$(POD2MAN)  Utils/mlocarna >$@

man/locarnate.1: Utils/locarnate man-subdir
	-$(POD2MAN)  Utils/locarnate >$@

man-subdir:
	if [ ! -d $(builddir)/man ] ; then mkdir $(builddir)/man ; fi



## these goals are for my private use - SW

LOCAL_INSTDIR=$(HOME)/Soft
LOCAL_WEB_INSTDIR=$(HOME)/public_html/web/Software/LocARNA

.PHONY: release release-local-install web-release tag-version

tag-version:
	@tag="v.$(VERSION)"; \
	tag=$${tag//./_} ; \
	echo "Tag $$tag" ; \
	cvs tag -F $$tag

release:
	@if [ ! -e Releases/$(distdir).tar.gz ]; then \
	  make dist-gzip; \
	  mv $(distdir).tar.gz Releases; \
	  cvs add Releases/$(distdir).tar.gz ; \
	  cvs commit Releases/$(distdir).tar.gz; \
	  make tag-version ; \
	else \
	  echo "Release already existed."; \
	  echo "For updating it, run make update-release."; \
	fi

update-release: dist-gzip
	@mv $(distdir).tar.gz Releases
	@cvs commit Releases/$(distdir).tar.gz
	@make tag-version

release-local-install: release
	cd Releases; tar xzf $(distdir).tar.gz; \
        cd $(distdir); \
	./configure --prefix=$(LOCAL_INSTDIR)/$(distdir) \
	    --enable-static TCOFFEE=/usr/local/bin/t_coffee-5.03 \
            --with-vrna=/usr/local/vrna/1.8.4; \
	make; make install

web-release: release
	cp Releases/$(distdir).tar.gz $(LOCAL_WEB_INSTDIR)/Releases; \
	cd $(LOCAL_WEB_INSTDIR)/Releases; \
	if cvs add $(distdir).tar.gz ; then \
	  echo "Please change $(LOCAL_WEB_INSTDIR)/index.html for new release and commit / wwwupdate --no-elib"; \
	else \
	  echo "Please run wwwupdate --no-elib manually."; \
	fi
