ACLOCAL_AMFLAGS=-I m4

SUBDIRS = src Utils lib man


matrices_DATA=\
Matrices/RIBOSUM85_60

#Matrices/RIBOSUM100_25 Matrices/RIBOSUM100_30 Matrices/RIBOSUM100_35 Matrices/RIBOSUM100_40 \
Matrices/RIBOSUM100_45 Matrices/RIBOSUM100_50 Matrices/RIBOSUM100_55 Matrices/RIBOSUM100_60 \
Matrices/RIBOSUM100_65 Matrices/RIBOSUM100_70 Matrices/RIBOSUM100_75 Matrices/RIBOSUM100_80 \
Matrices/RIBOSUM100_85 Matrices/RIBOSUM100_90 Matrices/RIBOSUM100_95 \
Matrices/RIBOSUM45_25 Matrices/RIBOSUM45_30 Matrices/RIBOSUM45_35 Matrices/RIBOSUM45_40 \
Matrices/RIBOSUM45_45 Matrices/RIBOSUM45_50 Matrices/RIBOSUM45_55 Matrices/RIBOSUM45_60 \
Matrices/RIBOSUM45_65 Matrices/RIBOSUM45_70 Matrices/RIBOSUM45_75 Matrices/RIBOSUM45_80 \
Matrices/RIBOSUM45_85 Matrices/RIBOSUM45_90 Matrices/RIBOSUM45_95 \
Matrices/RIBOSUM50_25 Matrices/RIBOSUM50_30 Matrices/RIBOSUM50_35 Matrices/RIBOSUM50_40 \
Matrices/RIBOSUM50_45 Matrices/RIBOSUM50_50 Matrices/RIBOSUM50_55 Matrices/RIBOSUM50_60 \
Matrices/RIBOSUM50_65 Matrices/RIBOSUM50_70 Matrices/RIBOSUM50_75 Matrices/RIBOSUM50_80 \
Matrices/RIBOSUM50_85 Matrices/RIBOSUM50_90 Matrices/RIBOSUM50_95 \
Matrices/RIBOSUM55_25 Matrices/RIBOSUM55_30 Matrices/RIBOSUM55_35 Matrices/RIBOSUM55_40 \
Matrices/RIBOSUM55_45 Matrices/RIBOSUM55_50 Matrices/RIBOSUM55_55 Matrices/RIBOSUM55_60 \
Matrices/RIBOSUM55_65 Matrices/RIBOSUM55_70 Matrices/RIBOSUM55_75 Matrices/RIBOSUM55_80 \
Matrices/RIBOSUM55_85 Matrices/RIBOSUM55_90 Matrices/RIBOSUM55_95 \
Matrices/RIBOSUM60_25 Matrices/RIBOSUM60_30 Matrices/RIBOSUM60_35 Matrices/RIBOSUM60_40 \
Matrices/RIBOSUM60_45 Matrices/RIBOSUM60_50 Matrices/RIBOSUM60_55 Matrices/RIBOSUM60_60 \
Matrices/RIBOSUM60_65 Matrices/RIBOSUM60_70 Matrices/RIBOSUM60_75 Matrices/RIBOSUM60_80 \
Matrices/RIBOSUM60_85 Matrices/RIBOSUM60_90 Matrices/RIBOSUM60_95 \
Matrices/RIBOSUM65_25 Matrices/RIBOSUM65_30 Matrices/RIBOSUM65_35 Matrices/RIBOSUM65_40 \
Matrices/RIBOSUM65_45 Matrices/RIBOSUM65_50 Matrices/RIBOSUM65_55 Matrices/RIBOSUM65_60 \
Matrices/RIBOSUM65_65 Matrices/RIBOSUM65_70 Matrices/RIBOSUM65_75 Matrices/RIBOSUM65_80 \
Matrices/RIBOSUM65_85 Matrices/RIBOSUM65_90 Matrices/RIBOSUM65_95 \
Matrices/RIBOSUM70_25 Matrices/RIBOSUM70_30 Matrices/RIBOSUM70_35 Matrices/RIBOSUM70_40 \
Matrices/RIBOSUM70_45 Matrices/RIBOSUM70_50 Matrices/RIBOSUM70_55 Matrices/RIBOSUM70_60 \
Matrices/RIBOSUM70_65 Matrices/RIBOSUM70_70 Matrices/RIBOSUM70_75 Matrices/RIBOSUM70_80 \
Matrices/RIBOSUM70_85 Matrices/RIBOSUM70_90 Matrices/RIBOSUM70_95 \
Matrices/RIBOSUM75_25 Matrices/RIBOSUM75_30 Matrices/RIBOSUM75_35 Matrices/RIBOSUM75_40 \
Matrices/RIBOSUM75_45 Matrices/RIBOSUM75_50 Matrices/RIBOSUM75_55 Matrices/RIBOSUM75_60 \
Matrices/RIBOSUM75_65 Matrices/RIBOSUM75_70 Matrices/RIBOSUM75_75 Matrices/RIBOSUM75_80 \
Matrices/RIBOSUM75_85 Matrices/RIBOSUM75_90 Matrices/RIBOSUM75_95 \
Matrices/RIBOSUM80_25 Matrices/RIBOSUM80_30 Matrices/RIBOSUM80_35 Matrices/RIBOSUM80_40 \
Matrices/RIBOSUM80_45 Matrices/RIBOSUM80_50 Matrices/RIBOSUM80_55 Matrices/RIBOSUM80_60 \
Matrices/RIBOSUM80_65 Matrices/RIBOSUM80_70 Matrices/RIBOSUM80_75 Matrices/RIBOSUM80_80 \
Matrices/RIBOSUM80_85 Matrices/RIBOSUM80_90 Matrices/RIBOSUM80_95 \
Matrices/RIBOSUM85_25 Matrices/RIBOSUM85_30 Matrices/RIBOSUM85_35 Matrices/RIBOSUM85_40 \
Matrices/RIBOSUM85_45 Matrices/RIBOSUM85_50 Matrices/RIBOSUM85_55 Matrices/RIBOSUM85_60 \
Matrices/RIBOSUM85_65 Matrices/RIBOSUM85_70 Matrices/RIBOSUM85_75 Matrices/RIBOSUM85_80 \
Matrices/RIBOSUM85_85 Matrices/RIBOSUM85_90 Matrices/RIBOSUM85_95 \
Matrices/RIBOSUM90_25 Matrices/RIBOSUM90_30 Matrices/RIBOSUM90_35 Matrices/RIBOSUM90_40 \
Matrices/RIBOSUM90_45 Matrices/RIBOSUM90_50 Matrices/RIBOSUM90_55 Matrices/RIBOSUM90_60 \
Matrices/RIBOSUM90_65 Matrices/RIBOSUM90_70 Matrices/RIBOSUM90_75 Matrices/RIBOSUM90_80 \
Matrices/RIBOSUM90_85 Matrices/RIBOSUM90_90 Matrices/RIBOSUM90_95 \
Matrices/RIBOSUM95_25 Matrices/RIBOSUM95_30 Matrices/RIBOSUM95_35 Matrices/RIBOSUM95_40 \
Matrices/RIBOSUM95_45 Matrices/RIBOSUM95_50 Matrices/RIBOSUM95_55 Matrices/RIBOSUM95_60 \
Matrices/RIBOSUM95_65 Matrices/RIBOSUM95_70 Matrices/RIBOSUM95_75 Matrices/RIBOSUM95_80 \
Matrices/RIBOSUM95_85 Matrices/RIBOSUM95_90 Matrices/RIBOSUM95_95

matricesdir=$(prefix)/share/locarna/Matrices

EXTRA_DIST=Examples/archaea.fa Examples/ferritin.fa Examples/haca.snoRNA.fa Examples/hammerhead_3.fa \
	   $(matrices_DATA) 


## these goals are for my private use (release and install releases) - SW

LOCAL_INSTDIR=$(HOME)/Soft
LOCAL_WEB_INSTDIR=$(HOME)/public_html/web/Software/LocARNA

GLOBAL_INSTALL_DIR=/usr/local/user
GLOBAL_VRNA=/usr/local/user/ViennaRNA-2.0.7
GLOBAL_TCOFFEE=/usr/local/bin/t_coffee-5.03

REMOTE_HOST=isis.informatik.uni-freiburg.de

.PHONY: release update-release release-online install-release install-release-local install-release-remote

## make release
release:
	@if grep $(distdir) .hgtags ; then \
	   echo "ERROR: tag $(distdir) exists already; use update-release to force tag or set new version in configure.ac"; \
	else \
	  echo "Make release $(distdir) from current revision"; \
	  hg tag $(distdir); \
	  echo "The new tag is committed but not pushed."; \
	fi

update-release:
	@echo "Make or update release $(distdir) from current revision"
	@hg tag -f $(distdir)
	@echo "The new tag is committed but not pushed."

## generate $(distdir).tar.gz from tagged release
$(distdir).tar.gz: .hgtags Makefile.am
	@echo "Update to release tag $(distdir)"
	@if hg update -c -r $(distdir) ; then \
	  echo "Generate $(distdir).tar.gz" ;\
	  make dist-gzip ;\
	  echo "Update to tip" ;\
	  hg update ;\
	else \
	  false ;\
	fi


# ## install release in local $GLOBAL_INSTALL_DIR
# install-release-local: $(distdir).tar.gz
# 	@if [ ! -d tmp ] ; then mkdir tmp ; fi
# 	@cd tmp; \
# 	tar xzf ../$(distdir).tar.gz ;\
# 	cd $(distdir); \
# 	./configure --prefix=$(GLOBAL_INSTALL_DIR)/$(distdir) \
# 	  --enable-static \
# 	  --enable-rnalib \
#           --with-vrna=$(GLOBAL_VRNA) \
# 	  TCOFFEE=$(GLOBAL_TCOFFEE) ; \
# 	make; make install

## compile release on remote host and install in remote host's $GLOBAL_INSTALL_DIR
install-release-remote: $(distdir).tar.gz
	scp $(distdir).tar.gz $(REMOTE_HOST):$(GLOBAL_INSTALL_DIR)/src
	ssh $(REMOTE_HOST) 'sh -c "cd $(GLOBAL_INSTALL_DIR)/src; \
	  if test -d $(distdir) ; then rm -rf $(distdir) ; fi ;\
	  tar xzf $(distdir).tar.gz ;\
	  cd $(distdir); \
	  ./configure --prefix=$(GLOBAL_INSTALL_DIR)/$(distdir) --enable-link-static --enable-large-pf --enable-librna --with-vrna=$(GLOBAL_VRNA) TCOFFEE=$(GLOBAL_TCOFFEE) ;\
	  make -j8; make install ;\
	  cd .. ;\
	  cp $(distdir)/config.log $(distdir).config.log ;\
	  rm -rf $(distdir) \
	"'

install-release: install-release-remote

release-online: $(distdir).tar.gz
	@cp $(distdir).tar.gz $(LOCAL_WEB_INSTDIR)/Releases
	@cd $(LOCAL_WEB_INSTDIR)/Releases; \
	if cvs add $(distdir).tar.gz ; then \
	  echo "Please change $(LOCAL_WEB_INSTDIR)/index.html for new release and commit / wwwupdate --no-elib"; \
	else \
	  echo "Please run wwwupdate --no-elib manually."; \
	fi


#check whether $(distdir).tar.gz exists, now obsolete
#@if [ ! -e $(distdir).tar.gz ]; then echo "Exit."; exit; fi
