ACLOCAL_AMFLAGS=-I m4

SUBDIRS = src lib Doc/man

## doxygen documentation
include $(top_srcdir)/Doc/doxygen.am

matrices_DATA=\
Data/Matrices/RIBOSUM85_60

#Data/Matrices/RIBOSUM100_25 Data/Matrices/RIBOSUM100_30 Data/Matrices/RIBOSUM100_35 Data/Matrices/RIBOSUM100_40 \
Data/Matrices/RIBOSUM100_45 Data/Matrices/RIBOSUM100_50 Data/Matrices/RIBOSUM100_55 Data/Matrices/RIBOSUM100_60 \
Data/Matrices/RIBOSUM100_65 Data/Matrices/RIBOSUM100_70 Data/Matrices/RIBOSUM100_75 Data/Matrices/RIBOSUM100_80 \
Data/Matrices/RIBOSUM100_85 Data/Matrices/RIBOSUM100_90 Data/Matrices/RIBOSUM100_95 \
Data/Matrices/RIBOSUM45_25 Data/Matrices/RIBOSUM45_30 Data/Matrices/RIBOSUM45_35 Data/Matrices/RIBOSUM45_40 \
Data/Matrices/RIBOSUM45_45 Data/Matrices/RIBOSUM45_50 Data/Matrices/RIBOSUM45_55 Data/Matrices/RIBOSUM45_60 \
Data/Matrices/RIBOSUM45_65 Data/Matrices/RIBOSUM45_70 Data/Matrices/RIBOSUM45_75 Data/Matrices/RIBOSUM45_80 \
Data/Matrices/RIBOSUM45_85 Data/Matrices/RIBOSUM45_90 Data/Matrices/RIBOSUM45_95 \
Data/Matrices/RIBOSUM50_25 Data/Matrices/RIBOSUM50_30 Data/Matrices/RIBOSUM50_35 Data/Matrices/RIBOSUM50_40 \
Data/Matrices/RIBOSUM50_45 Data/Matrices/RIBOSUM50_50 Data/Matrices/RIBOSUM50_55 Data/Matrices/RIBOSUM50_60 \
Data/Matrices/RIBOSUM50_65 Data/Matrices/RIBOSUM50_70 Data/Matrices/RIBOSUM50_75 Data/Matrices/RIBOSUM50_80 \
Data/Matrices/RIBOSUM50_85 Data/Matrices/RIBOSUM50_90 Data/Matrices/RIBOSUM50_95 \
Data/Matrices/RIBOSUM55_25 Data/Matrices/RIBOSUM55_30 Data/Matrices/RIBOSUM55_35 Data/Matrices/RIBOSUM55_40 \
Data/Matrices/RIBOSUM55_45 Data/Matrices/RIBOSUM55_50 Data/Matrices/RIBOSUM55_55 Data/Matrices/RIBOSUM55_60 \
Data/Matrices/RIBOSUM55_65 Data/Matrices/RIBOSUM55_70 Data/Matrices/RIBOSUM55_75 Data/Matrices/RIBOSUM55_80 \
Data/Matrices/RIBOSUM55_85 Data/Matrices/RIBOSUM55_90 Data/Matrices/RIBOSUM55_95 \
Data/Matrices/RIBOSUM60_25 Data/Matrices/RIBOSUM60_30 Data/Matrices/RIBOSUM60_35 Data/Matrices/RIBOSUM60_40 \
Data/Matrices/RIBOSUM60_45 Data/Matrices/RIBOSUM60_50 Data/Matrices/RIBOSUM60_55 Data/Matrices/RIBOSUM60_60 \
Data/Matrices/RIBOSUM60_65 Data/Matrices/RIBOSUM60_70 Data/Matrices/RIBOSUM60_75 Data/Matrices/RIBOSUM60_80 \
Data/Matrices/RIBOSUM60_85 Data/Matrices/RIBOSUM60_90 Data/Matrices/RIBOSUM60_95 \
Data/Matrices/RIBOSUM65_25 Data/Matrices/RIBOSUM65_30 Data/Matrices/RIBOSUM65_35 Data/Matrices/RIBOSUM65_40 \
Data/Matrices/RIBOSUM65_45 Data/Matrices/RIBOSUM65_50 Data/Matrices/RIBOSUM65_55 Data/Matrices/RIBOSUM65_60 \
Data/Matrices/RIBOSUM65_65 Data/Matrices/RIBOSUM65_70 Data/Matrices/RIBOSUM65_75 Data/Matrices/RIBOSUM65_80 \
Data/Matrices/RIBOSUM65_85 Data/Matrices/RIBOSUM65_90 Data/Matrices/RIBOSUM65_95 \
Data/Matrices/RIBOSUM70_25 Data/Matrices/RIBOSUM70_30 Data/Matrices/RIBOSUM70_35 Data/Matrices/RIBOSUM70_40 \
Data/Matrices/RIBOSUM70_45 Data/Matrices/RIBOSUM70_50 Data/Matrices/RIBOSUM70_55 Data/Matrices/RIBOSUM70_60 \
Data/Matrices/RIBOSUM70_65 Data/Matrices/RIBOSUM70_70 Data/Matrices/RIBOSUM70_75 Data/Matrices/RIBOSUM70_80 \
Data/Matrices/RIBOSUM70_85 Data/Matrices/RIBOSUM70_90 Data/Matrices/RIBOSUM70_95 \
Data/Matrices/RIBOSUM75_25 Data/Matrices/RIBOSUM75_30 Data/Matrices/RIBOSUM75_35 Data/Matrices/RIBOSUM75_40 \
Data/Matrices/RIBOSUM75_45 Data/Matrices/RIBOSUM75_50 Data/Matrices/RIBOSUM75_55 Data/Matrices/RIBOSUM75_60 \
Data/Matrices/RIBOSUM75_65 Data/Matrices/RIBOSUM75_70 Data/Matrices/RIBOSUM75_75 Data/Matrices/RIBOSUM75_80 \
Data/Matrices/RIBOSUM75_85 Data/Matrices/RIBOSUM75_90 Data/Matrices/RIBOSUM75_95 \
Data/Matrices/RIBOSUM80_25 Data/Matrices/RIBOSUM80_30 Data/Matrices/RIBOSUM80_35 Data/Matrices/RIBOSUM80_40 \
Data/Matrices/RIBOSUM80_45 Data/Matrices/RIBOSUM80_50 Data/Matrices/RIBOSUM80_55 Data/Matrices/RIBOSUM80_60 \
Data/Matrices/RIBOSUM80_65 Data/Matrices/RIBOSUM80_70 Data/Matrices/RIBOSUM80_75 Data/Matrices/RIBOSUM80_80 \
Data/Matrices/RIBOSUM80_85 Data/Matrices/RIBOSUM80_90 Data/Matrices/RIBOSUM80_95 \
Data/Matrices/RIBOSUM85_25 Data/Matrices/RIBOSUM85_30 Data/Matrices/RIBOSUM85_35 Data/Matrices/RIBOSUM85_40 \
Data/Matrices/RIBOSUM85_45 Data/Matrices/RIBOSUM85_50 Data/Matrices/RIBOSUM85_55 Data/Matrices/RIBOSUM85_60 \
Data/Matrices/RIBOSUM85_65 Data/Matrices/RIBOSUM85_70 Data/Matrices/RIBOSUM85_75 Data/Matrices/RIBOSUM85_80 \
Data/Matrices/RIBOSUM85_85 Data/Matrices/RIBOSUM85_90 Data/Matrices/RIBOSUM85_95 \
Data/Matrices/RIBOSUM90_25 Data/Matrices/RIBOSUM90_30 Data/Matrices/RIBOSUM90_35 Data/Matrices/RIBOSUM90_40 \
Data/Matrices/RIBOSUM90_45 Data/Matrices/RIBOSUM90_50 Data/Matrices/RIBOSUM90_55 Data/Matrices/RIBOSUM90_60 \
Data/Matrices/RIBOSUM90_65 Data/Matrices/RIBOSUM90_70 Data/Matrices/RIBOSUM90_75 Data/Matrices/RIBOSUM90_80 \
Data/Matrices/RIBOSUM90_85 Data/Matrices/RIBOSUM90_90 Data/Matrices/RIBOSUM90_95 \
Data/Matrices/RIBOSUM95_25 Data/Matrices/RIBOSUM95_30 Data/Matrices/RIBOSUM95_35 Data/Matrices/RIBOSUM95_40 \
Data/Matrices/RIBOSUM95_45 Data/Matrices/RIBOSUM95_50 Data/Matrices/RIBOSUM95_55 Data/Matrices/RIBOSUM95_60 \
Data/Matrices/RIBOSUM95_65 Data/Matrices/RIBOSUM95_70 Data/Matrices/RIBOSUM95_75 Data/Matrices/RIBOSUM95_80 \
Data/Matrices/RIBOSUM95_85 Data/Matrices/RIBOSUM95_90 Data/Matrices/RIBOSUM95_95

matricesdir=$(prefix)/share/locarna/Matrices

EXTRA_DIST= Data/Examples/archaea.fa Data/Examples/ferritin.fa			\
	Data/Examples/haca.snoRNA.fa Data/Examples/hammerhead_3.fa		\
	Data/Examples/gcvT.fa $(matrices_DATA) Doc/doxygen.cfg
